MaxPermSize is no longer supported in openjdk >16